# glnet

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yaml  build.yml
example/client/: client.cpp
example/server/: server.cpp
example/shared/: Message.hpp  Player.hpp
include/: Callback.hpp  Manager.hpp  Socket.hpp
include/Data/: Buffer.hpp  Endpoint.hpp  Message.hpp  Packet.hpp
include/Enum/: Connection.hpp
include/Protocol/: Tcp.hpp  Udp.hpp
include/Utils/: Converter.hpp  Singleton.hpp  Threads.hpp
src/: Callback.cpp  Manager.cpp  Socket.cpp
src/Data/: Buffer.cpp  Packet.cpp
src/Protocol/: Tcp.cpp  Udp.cpp
src/Utils/: Converter.cpp  Threads.cpp
